fix: Remove opaque predicate field assignments
From openrs2 upstream, author sophxm:
The previous implementation removes flow obstructor accesses, but not
assignments (which occur occasionally in older client builds).